--- a/app/globals.css
+++ b/app/globals.css
@@ -290,3 +290,16 @@ code {
   background: rgba(255, 255, 255, 0.2);
   border-color: rgba(255, 255, 255, 0.5);
 }
+
+.blinking-text {
+  animation: blink 0.2s ease infinite alternate;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
